fixing a bug with scrollbar margins

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -112,29 +112,15 @@ h1 {
 .pointer {
   cursor: pointer;
 }
-::-webkit-scrollbar-button {
-  /* background-image:url(''); */
-  /* background-repeat:no-repeat; */
-  width: 8px;
-  height: 0px
-}
-::-webkit-scrollbar-track {
-  background-color: #f8f8f8
-}
 ::-webkit-scrollbar-thumb {
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  background-color:#2c323a1f;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  border: 3px solid #f8f8f8;
+  background-color: #2c323a1f;
 }
 ::-webkit-scrollbar-thumb:hover{
   background-color: #2c323a3f;
 }
-::-webkit-resizer{
-  /* background-image: url(''); */
-  /* background-repeat: no-repeat; */
-  width: 8px;
-  height: 0px
-}
 ::-webkit-scrollbar{
-  width: 8px;
+  width: 12px;
 }
